--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,17 @@
-/* basic reset */
+/*** web fonts ***/
+
+@import url(https://fonts.googleapis.com/css?family=Droid+Sans:400);
+
+/*** basic reset ***/
 
 body, h1, h2, ul, ol {
   margin: 0;
   padding: 0;
-  
+
+}
+
+body {
+  font-family: 'Droid Sans', sans-serif;
+  margin: 20px auto 0;
+  width: 80%
 }
