--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,7 @@
 /*** web fonts ***/
 
 @import url(https://fonts.googleapis.com/css?family=Droid+Sans:400);
+@import url(https://fonts.googleapis.com/css?family=Monoton:400);
 
 /*** basic reset ***/
 
@@ -22,6 +23,11 @@ header {
   justify-content: space-between;
 }
 
+header h1 {
+  font-family: 'Monoton', cursive;
+  font-size: 2em;
+}
+
 nav {
   margin-top: .7em;
 }
@@ -38,4 +44,8 @@ nav li {
 
 nav a {
   text-decoration: none;
+  padding: 10px;
+  background-color: orange;
+  color: black;
+  border-radius: 4px;
 }
